name:                 indextype
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Clinton Mead
maintainer:           clintonmead@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  exposed-modules:      Control.IndexT
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010

Test-Suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules: Control.IndexT
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, hspec
  hs-source-dirs:       test, src
  default-language:     Haskell2010
